force-app/main/default/objects/I__c/fields/JNTS__c.field-meta.xml
<CustomField>
    <fullName>JNTS__c</fullName>
    <label># JNTS</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>