force-app/main/default/objects/I__c/fields/Js__c.field-meta.xml
<CustomField>
    <fullName>Js__c</fullName>
    <label>Joints</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>THD - Flush</fullName>
            </value>
            <value>
                <fullName>THD - Coupling</fullName>
            </value>
            <value>
                <fullName>Welded</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>