force-app/main/default/objects/I__c/fields/JT__c.field-meta.xml
<CustomField>
    <fullName>JT__c</fullName>
    <label>Job Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>