force-app/main/default/objects/I__c/fields/KB__c.field-meta.xml
<CustomField>
    <fullName>KB__c</fullName>
    <label>KB</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>