force-app/main/default/objects/I__c/fields/KOP__c.field-meta.xml
<CustomField>
    <fullName>KOP__c</fullName>
    <label>KOP</label>
    <length>100</length>
    <type>Text</type>
</CustomField>