force-app/main/default/objects/I__c/fields/KV1__c.field-meta.xml
<CustomField>
    <fullName>KV1__c</fullName>
    <label>Step-UP KVA</label>
    <length>100</length>
    <type>Text</type>
</CustomField>