force-app/main/default/objects/I__c/fields/KVA__c.field-meta.xml
<CustomField>
    <fullName>KVA__c</fullName>
    <label>KVA</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>