force-app/main/default/objects/I__c/fields/KVA_Required_MAX_Hz_3_Phase__c.field-meta.xml
<CustomField>
    <fullName>KVA_Required_MAX_Hz_3_Phase__c</fullName>
    <label>KVA REQUIRED @ MAX  Hz (3 PHASE)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>