force-app/main/default/objects/I__c/fields/L10__c.field-meta.xml
<CustomField>
    <fullName>L10__c</fullName>
    <label>Cable Serial1 Length</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>