force-app/main/default/objects/I__c/fields/L11__c.field-meta.xml
<CustomField>
    <fullName>L11__c</fullName>
    <label>Cable Serial2 Length</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>