force-app/main/default/objects/I__c/fields/L12__c.field-meta.xml
<CustomField>
    <fullName>L12__c</fullName>
    <label>Upper Pigtail Length</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>