force-app/main/default/objects/I__c/fields/L3Serial__c.field-meta.xml
<CustomField>
    <fullName>L3Serial__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Seal Serial # (3)</label>
    <referenceTo>SVMXC__Installed_Product__c</referenceTo>
    <relationshipLabel>Installs (Seal Serial # (3))</relationshipLabel>
    <relationshipName>Installs</relationshipName>
    <type>Lookup</type>
</CustomField>