force-app/main/default/objects/I__c/fields/Le1__c.field-meta.xml
<CustomField>
    <fullName>Le1__c</fullName>
    <label>Length</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>