force-app/main/default/objects/I__c/fields/LiS__c.field-meta.xml
<CustomField>
    <fullName>LiS__c</fullName>
    <label>Liner Size</label>
    <length>100</length>
    <type>Text</type>
</CustomField>