force-app/main/default/objects/I__c/fields/LL__c.field-meta.xml
<CustomField>
    <fullName>LL__c</fullName>
    <label>Lateral Length</label>
    <length>100</length>
    <type>Text</type>
</CustomField>