force-app/main/default/objects/I__c/fields/Loaded__c.field-meta.xml
<CustomField>
    <fullName>Loaded__c</fullName>
    <label>Loaded</label>
    <length>100</length>
    <type>Text</type>
</CustomField>