force-app/main/default/objects/I__c/fields/LUM__c.field-meta.xml
<CustomField>
    <fullName>LUM__c</fullName>
    <label>Length U/M</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ft</fullName>
            </value>
            <value>
                <fullName>m</fullName>
            </value>
            <value>
                <fullName>Km</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>