force-app/main/default/objects/I__c/fields/LW__c.field-meta.xml
<CustomField>
    <fullName>LW__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lease/Well Location</label>
    <referenceTo>SVMXC__Site__c</referenceTo>
    <relationshipLabel>Install</relationshipLabel>
    <relationshipName>Install</relationshipName>
    <type>Lookup</type>
</CustomField>