force-app/main/default/objects/I__c/fields/LWT__c.field-meta.xml
<CustomField>
    <fullName>LWT__c</fullName>
    <label>Liner WT</label>
    <length>100</length>
    <type>Text</type>
</CustomField>