force-app/main/default/objects/I__c/fields/M10__c.field-meta.xml
<CustomField>
    <fullName>M10__c</fullName>
    <label>SWB Motor MFG</label>
    <length>100</length>
    <type>Text</type>
</CustomField>