force-app/main/default/objects/I__c/fields/M1M__c.field-meta.xml
<CustomField>
    <fullName>M1M__c</fullName>
    <label>Motor 1 MFG</label>
    <length>100</length>
    <type>Text</type>
</CustomField>