force-app/main/default/objects/I__c/fields/M1O__c.field-meta.xml
<CustomField>
    <fullName>M1O__c</fullName>
    <label>Motor 1 Oil</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>300 EP (STD)</fullName>
            </value>
            <value>
                <fullName>400 EP (HT)</fullName>
            </value>
            <value>
                <fullName>Rocon #2</fullName>
            </value>
            <value>
                <fullName>#7 XHT</fullName>
            </value>
            <value>
                <fullName>CL-4</fullName>
            </value>
            <value>
                <fullName>CL-5</fullName>
            </value>
            <value>
                <fullName>CL-5E</fullName>
            </value>
            <value>
                <fullName>CL-6</fullName>
            </value>
            <value>
                <fullName>CL-7</fullName>
            </value>
            <value>
                <fullName>PC-92</fullName>
            </value>
            <value>
                <fullName>PC-401</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>