force-app/main/default/objects/I__c/fields/M1S__c.field-meta.xml
<CustomField>
    <fullName>M1S__c</fullName>
    <label>Motor 1 Housing</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CS</fullName>
            </value>
            <value>
                <fullName>CR</fullName>
            </value>
            <value>
                <fullName>13CH</fullName>
            </value>
            <value>
                <fullName>3SS</fullName>
            </value>
            <value>
                <fullName>4SS</fullName>
            </value>
            <value>
                <fullName>DPX</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>