force-app/main/default/objects/I__c/fields/M2__c.field-meta.xml
<CustomField>
    <fullName>M2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Motor Serial # (2)</label>
    <referenceTo>SVMXC__Installed_Product__c</referenceTo>
    <relationshipLabel>Install (Motor Serial # (2))</relationshipLabel>
    <relationshipName>InstallLCVO</relationshipName>
    <type>Lookup</type>
</CustomField>