force-app/main/default/objects/I__c/fields/M2G__c.field-meta.xml
<CustomField>
    <fullName>M2G__c</fullName>
    <label>Motor 2 HSG</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Paint</fullName>
            </value>
            <value>
                <fullName>3SS/Monel</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>