force-app/main/default/objects/I__c/fields/M2H__c.field-meta.xml
<CustomField>
    <fullName>M2H__c</fullName>
    <label>Motor 2 HT</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>