force-app/main/default/objects/I__c/fields/M2M__c.field-meta.xml
<CustomField>
    <fullName>M2M__c</fullName>
    <label>Motor 2 MFG</label>
    <length>100</length>
    <type>Text</type>
</CustomField>