force-app/main/default/objects/I__c/fields/M3__c.field-meta.xml
<CustomField>
    <fullName>M3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Motor Serial # (3)</label>
    <referenceTo>SVMXC__Installed_Product__c</referenceTo>
    <relationshipLabel>Install (Motor Serial # (3))</relationshipLabel>
    <relationshipName>InstallLCVY</relationshipName>
    <type>Lookup</type>
</CustomField>