force-app/main/default/objects/I__c/fields/M3N__c.field-meta.xml
<CustomField>
    <fullName>M3N__c</fullName>
    <label>Motor 3 New/Used</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Used</fullName>
            </value>
            <value>
                <fullName>Reconditioned</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>