force-app/main/default/objects/I__c/fields/MAX_Hz__c.field-meta.xml
<CustomField>
    <fullName>MAX_Hz__c</fullName>
    <label>MAX Hz</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>