force-app/main/default/objects/I__c/fields/ME__c.field-meta.xml
<CustomField>
    <fullName>ME__c</fullName>
    <label>MLC Length</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>