force-app/main/default/objects/I__c/fields/MF9__c.field-meta.xml
<CustomField>
    <fullName>MF9__c</fullName>
    <label>Step-UP MFG</label>
    <length>100</length>
    <type>Text</type>
</CustomField>