force-app/main/default/objects/I__c/fields/MFG1__c.field-meta.xml
<CustomField>
    <fullName>MFG1__c</fullName>
    <label>Filter1 MFG</label>
    <length>100</length>
    <type>Text</type>
</CustomField>