force-app/main/default/objects/I__c/fields/MFG2__c.field-meta.xml
<CustomField>
    <fullName>MFG2__c</fullName>
    <label>Filter2 MFG</label>
    <length>100</length>
    <type>Text</type>
</CustomField>