force-app/main/default/objects/I__c/fields/MHC2__c.field-meta.xml
<CustomField>
    <fullName>MHC2__c</fullName>
    <label>Motor 2 HSG Coating</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Paint</fullName>
            </value>
            <value>
                <fullName>COR RES</fullName>
            </value>
            <value>
                <fullName>NSF White</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>