force-app/main/default/objects/I__c/fields/Minutes_To_Pump_Up__c.field-meta.xml
<CustomField>
    <fullName>Minutes_To_Pump_Up__c</fullName>
    <label>Minutes To Pump Up</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>