force-app/main/default/objects/I__c/fields/ML1__c.field-meta.xml
<CustomField>
    <fullName>ML1__c</fullName>
    <label>Motor 1 Length</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>