force-app/main/default/objects/I__c/fields/ML2__c.field-meta.xml
<CustomField>
    <fullName>ML2__c</fullName>
    <label>Motor 2 Length</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>