force-app/main/default/objects/I__c/fields/ML3__c.field-meta.xml
<CustomField>
    <fullName>ML3__c</fullName>
    <label>Motor 3 Length</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>