force-app/main/default/objects/I__c/fields/MMA__c.field-meta.xml
<CustomField>
    <fullName>MMA__c</fullName>
    <label>MLC Armor</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Galv</fullName>
            </value>
            <value>
                <fullName>3SS</fullName>
            </value>
            <value>
                <fullName>Monel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>