force-app/main/default/objects/I__c/fields/MMF__c.field-meta.xml
<CustomField>
    <fullName>MMF__c</fullName>
    <label>MLC MFG</label>
    <length>100</length>
    <type>Text</type>
</CustomField>