force-app/main/default/objects/I__c/fields/MMN__c.field-meta.xml
<CustomField>
    <fullName>MMN__c</fullName>
    <label>MLC New/Used</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Used</fullName>
            </value>
            <value>
                <fullName>Reconditioned</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>