force-app/main/default/objects/I__c/fields/MMP__c.field-meta.xml
<CustomField>
    <fullName>MMP__c</fullName>
    <label>MLC Pothead</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Plug-in</fullName>
            </value>
            <value>
                <fullName>Tape-in</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>