force-app/main/default/objects/I__c/fields/MMS__c.field-meta.xml
<CustomField>
    <fullName>MMS__c</fullName>
    <label>MLC # of Splices</label>
    <length>100</length>
    <type>Text</type>
</CustomField>