force-app/main/default/objects/I__c/fields/Motor_A_B_3__c.field-meta.xml
<CustomField>
    <fullName>Motor_A_B_3__c</fullName>
    <label>Motor A-B (3)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>