force-app/main/default/objects/I__c/fields/Motor_A_C_2__c.field-meta.xml
<CustomField>
    <fullName>Motor_A_C_2__c</fullName>
    <label>Motor A-C (2)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>