force-app/main/default/objects/I__c/fields/Motor_A_GRND_1__c.field-meta.xml
<CustomField>
    <fullName>Motor_A_GRND_1__c</fullName>
    <label>Motor A-GRND (1)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>