force-app/main/default/objects/I__c/fields/Motor_Assembly_A_B__c.field-meta.xml
<CustomField>
    <fullName>Motor_Assembly_A_B__c</fullName>
    <label>Motor Assembly A-B</label>
    <length>100</length>
    <type>Text</type>
</CustomField>