force-app/main/default/objects/I__c/fields/Motor_Assembly_A_C__c.field-meta.xml
<CustomField>
    <fullName>Motor_Assembly_A_C__c</fullName>
    <label>Motor Assembly A-C</label>
    <length>100</length>
    <type>Text</type>
</CustomField>