force-app/main/default/objects/I__c/fields/Motor_Assembly_C_GRND__c.field-meta.xml
<CustomField>
    <fullName>Motor_Assembly_C_GRND__c</fullName>
    <label>Motor Assembly C-GRND</label>
    <length>100</length>
    <type>Text</type>
</CustomField>