force-app/main/default/objects/I__c/fields/Motor_B_C_1__c.field-meta.xml
<CustomField>
    <fullName>Motor_B_C_1__c</fullName>
    <label>Motor B-C (1)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>