force-app/main/default/objects/I__c/fields/Motor_B_GRND_3__c.field-meta.xml
<CustomField>
    <fullName>Motor_B_GRND_3__c</fullName>
    <label>Motor B-GRND (3)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>