force-app/main/default/objects/I__c/fields/Motor_C_GRND_3__c.field-meta.xml
<CustomField>
    <fullName>Motor_C_GRND_3__c</fullName>
    <label>Motor C-GRND (3)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>