force-app/main/default/objects/I__c/fields/MSD__c.field-meta.xml
<CustomField>
    <fullName>MSD__c</fullName>
    <label>Motor Set Depth</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>