force-app/main/default/objects/I__c/fields/MSL__c.field-meta.xml
<CustomField>
    <fullName>MSL__c</fullName>
    <label>Motor Shroud Length</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>