force-app/main/default/objects/I__c/fields/MTR_Load__c.field-meta.xml
<CustomField>
    <fullName>MTR_Load__c</fullName>
    <label>MTR Load %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>