force-app/main/default/objects/I__c/fields/N__c.field-meta.xml
<CustomField>
    <fullName>N__c</fullName>
    <label>Customer Rep/Contractor Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>