force-app/main/default/objects/I__c/fields/NP_Amps__c.field-meta.xml
<CustomField>
    <fullName>NP_Amps__c</fullName>
    <label>NP Amps</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>