force-app/main/default/objects/I__c/fields/NP_Volts__c.field-meta.xml
<CustomField>
    <fullName>NP_Volts__c</fullName>
    <label>NP Volts</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>