force-app/main/default/objects/I__c/fields/NU2__c.field-meta.xml
<CustomField>
    <fullName>NU2__c</fullName>
    <label>Adapter New/Used</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Use</fullName>
            </value>
            <value>
                <fullName>Reconditioned</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>