force-app/main/default/objects/I__c/fields/O1__c.field-meta.xml
<CustomField>
    <fullName>O1__c</fullName>
    <label>Operator1</label>
    <length>100</length>
    <type>Text</type>
</CustomField>