force-app/main/default/objects/I__c/fields/O2__c.field-meta.xml
<CustomField>
    <fullName>O2__c</fullName>
    <label>Operator2</label>
    <length>100</length>
    <type>Text</type>
</CustomField>