force-app/main/default/objects/I__c/fields/O3__c.field-meta.xml
<CustomField>
    <fullName>O3__c</fullName>
    <label>Operator3</label>
    <length>100</length>
    <type>Text</type>
</CustomField>