force-app/main/default/objects/I__c/fields/OD1__c.field-meta.xml
<CustomField>
    <fullName>OD1__c</fullName>
    <label>Anode OD</label>
    <length>100</length>
    <type>Text</type>
</CustomField>