force-app/main/default/objects/I__c/fields/OD2__c.field-meta.xml
<CustomField>
    <fullName>OD2__c</fullName>
    <label>Desander OD</label>
    <length>100</length>
    <type>Text</type>
</CustomField>