force-app/main/default/objects/I__c/fields/OL__c.field-meta.xml
<CustomField>
    <fullName>OL__c</fullName>
    <label>OL</label>
    <length>100</length>
    <type>Text</type>
</CustomField>