force-app/main/default/objects/I__c/fields/OM__c.field-meta.xml
<CustomField>
    <fullName>OM__c</fullName>
    <label>Operating Mode</label>
    <length>100</length>
    <type>Text</type>
</CustomField>